# xmas-game

./: .gitignore  CMakeLists.txt  README.md  todo.md
src/: enemy.c  enemy.h  entity.c  entity.h  game.c  game.h  item.c  item.h  main.c  player.c  player.h  projectile.c  projectile.h  ui.c  ui.h  utils.c  utils.h
